--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^6.5.1",
+    "moment": "^2.29.4",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
