--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.1.1",
     "framer-motion": "^6.5.1",
     "moment": "^2.29.4",
     "next": "12.2.3",
@@ -26,6 +27,7 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "postcss": "^8.4.14",
+    "prisma": "^4.1.1",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
