--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
+    "recharts": "^2.1.12",
     "swr": "^1.3.0"
   },
   "devDependencies": {
